fix: scrollbar theme

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -12,13 +12,8 @@
     outline: none !important;
   }
 
-  @media (prefers-color-scheme: dark) {
-    * {
-      color-scheme: dark;
-    }
-  }
-  /* * {
-    scrollbar-color: theme(colors.gray.500) theme(colors.gray.100);
+  * {
+    scrollbar-color: theme(colors.gray.400) theme(colors.gray.100);
   }
 
   *::-webkit-scrollbar,
@@ -39,29 +34,38 @@
     border: 3px solid theme(colors.gray.100);
   }
 
-  @media (prefers-color-scheme: dark) {
+  html.dark {
+    &,
     * {
-      scrollbar-color: theme(colors.gray.500) theme(colors.gray.800);
+      color-scheme: dark;
     }
 
+    &,
+    * {
+      scrollbar-color: theme(colors.gray.700) theme(colors.gray.800);
+    }
+
+    &::-webkit-scrollbar,
     *::-webkit-scrollbar,
     * scrollbar {
       width: 1rem;
       height: 1rem;
     }
 
+    & *::-webkit-scrollbar-track,
     *::-webkit-scrollbar-track,
     * scrollbar-track {
       background: theme(colors.gray.800);
     }
 
+    &::-webkit-scrollbar-thumb,
     *::-webkit-scrollbar-thumb,
     * scrollbar-thumb {
       background: theme(colors.gray.600);
       border-radius: 0.5rem;
       border: 3px solid theme(colors.gray.800);
     }
-  } */
+  }
 
   [disabled] {
     @apply opacity-50 pointer-events-none;
